[package]
name = "job_queue"
version = "0.1.0"
authors = ["sucaba <wareverbohdan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
tokio = { version = "=1.9.0", features = [ "full" ] }
mysql_async = "0.28.0"
sqlx = { version = "0.5.5", features = ["runtime-tokio-rustls", "mysql", "migrate", "chrono", "uuid", "json"] }
serde = { version = "1.0.130", features = ["derive"]  }
serde_json = "1.0.68"
uuid = "0.8.2"

[dev-dependencies]
mysql_rent = { git = "https://github.com/sucaba/mysql-rent.git", package="mysql-rent" }
